# production-llm-patterns

./: .env.example  .gitignore  AI_REGISTRY.md  CONTENT_CALENDAR.md  CONTRIBUTING.md  LICENSE  NIGHTLY_BUILD_STATUS.md  PATTERN_TEMPLATE.md  README.md  do_commit_only.py  do_git.py  do_git_mar.py  do_pr.py  nightly_build.sh  nightly_create_pr.sh  nightly_full.sh  run_commit.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  improvement.md  pattern-request.md
.github/workflows/: nightly-pattern-build.yml
docs/: adoption-roadmap.md  anti-patterns.md
docs/recipes/: README.md  agent-safety-stack.md  cost-control-stack.md  rag-quality-stack.md  resilience-stack.md  safe-prompt-iteration.md
integrations/agents/: README.md
integrations/batch/: README.md
integrations/multi-agent/: README.md
integrations/rag/: README.md
integrations/streaming/: README.md
patterns/cost-control/cost-dashboard/: README.md  cost-analysis.md
patterns/cost-control/cost-dashboard/src/py/: __init__.py  mock_provider.py  pyproject.toml  types.py
patterns/cost-control/cost-dashboard/src/py/tests/: conftest.py  test_index.py
patterns/cost-control/model-routing/: README.md  cost-analysis.md
patterns/cost-control/semantic-caching/: README.md  cost-analysis.md
patterns/cost-control/semantic-caching/src/py/: __init__.py  _types.py  mock_provider.py  pyproject.toml
patterns/cost-control/semantic-caching/src/py/tests/: test_index.py
patterns/cost-control/token-budget-middleware/: README.md  cost-analysis.md
patterns/cost-control/token-budget-middleware/src/py/: __init__.py  budget_types.py  mock_provider.py  pyproject.toml  token_budget_middleware.py
patterns/cost-control/token-budget-middleware/src/py/tests/: conftest.py  test_index.py
patterns/data-pipeline/chunking-strategies/: README.md  cost-analysis.md
patterns/data-pipeline/context-management/: .env.example  README.md  cost-analysis.md
patterns/data-pipeline/context-management/src/py/: __init__.py  mock_provider.py  pyproject.toml  types.py
patterns/data-pipeline/context-management/src/py/tests/: test_index.py
patterns/data-pipeline/embedding-refresh/: README.md  cost-analysis.md
patterns/data-pipeline/embedding-refresh/src/py/: __init__.py  mock_provider.py  pyproject.toml  types.py
patterns/data-pipeline/embedding-refresh/src/py/tests/: conftest.py  test_index.py
patterns/data-pipeline/index-maintenance/: README.md  cost-analysis.md
patterns/data-pipeline/index-maintenance/src/py/: __init__.py  mock_provider.py  pyproject.toml  types.py
patterns/data-pipeline/index-maintenance/src/py/tests/: conftest.py  test_index.py
patterns/observability/drift-detection/: README.md  cost-analysis.md
patterns/observability/online-eval-monitoring/: README.md  cost-analysis.md
patterns/observability/output-quality-monitoring/: README.md  cost-analysis.md
patterns/observability/output-quality-monitoring/src/py/: __init__.py  mock_provider.py  pyproject.toml  types.py
patterns/observability/output-quality-monitoring/src/py/quality_monitoring/: __init__.py  mock_provider.py  types.py
patterns/observability/output-quality-monitoring/src/py/tests/: conftest.py  test_index.py
patterns/observability/prompt-diffing/: README.md  cost-analysis.md
patterns/observability/prompt-diffing/src/py/: __init__.py  mock_provider.py  models.py  pyproject.toml
patterns/observability/prompt-diffing/src/py/tests/: conftest.py  test_index.py
patterns/observability/prompt-version-registry/: README.md  cost-analysis.md
patterns/orchestration/multi-agent-routing/src/py/: __init__.py  mock_provider.py  pyproject.toml  types.py
patterns/orchestration/multi-agent-routing/src/py/tests/: conftest.py  test_index.py
patterns/orchestration/state-checkpointing/src/py/: __init__.py  mock_provider.py  pyproject.toml  stores.py  types.py
patterns/orchestration/state-checkpointing/src/py/tests/: test_index.py
patterns/performance/latency-budget/: README.md  (+1 more)
patterns/performance/latency-budget/src/py/: __init__.py  mock_provider.py  pyproject.toml  types.py
patterns/performance/latency-budget/src/py/tests/: test_index.py
patterns/performance/streaming-backpressure/src/py/: __init__.py  mock_provider.py  pyproject.toml  types.py
patterns/performance/streaming-backpressure/src/py/tests/: test_index.py
patterns/resilience/circuit-breaker/src/py/: __init__.py  cb_types.py  mock_provider.py  pyproject.toml
patterns/resilience/circuit-breaker/src/py/tests/: test_index.py
patterns/resilience/retry-with-budget/src/py/: pyproject.toml
patterns/resilience/retry-with-budget/src/py/retry_with_budget/: __init__.py  mock_provider.py  types.py
patterns/resilience/retry-with-budget/src/py/tests/: test_index.py
patterns/safety/human-in-the-loop/src/py/: __init__.py  hitl_types.py  mock_provider.py  pyproject.toml
patterns/safety/human-in-the-loop/src/py/tests/: conftest.py  test_index.py
patterns/safety/prompt-injection-defense/src/py/: __init__.py  defense_types.py  mock_provider.py  pyproject.toml  types.py
patterns/safety/prompt-injection-defense/src/py/tests/: test_index.py
patterns/safety/structured-output-validation/src/py/: __init__.py  _types.py  mock_provider.py  pyproject.toml  validator.py
patterns/safety/structured-output-validation/src/py/tests/: conftest.py  test_index.py
patterns/testing/adversarial-inputs/src/py/: pyproject.toml
patterns/testing/adversarial-inputs/src/py/adversarial_inputs/: __init__.py  mock_provider.py  models.py
patterns/testing/adversarial-inputs/src/py/adversarial_inputs/tests/: test_index.py
patterns/testing/snapshot-testing/src/py/: __init__.py  mock_provider.py  pyproject.toml  types.py
patterns/testing/snapshot-testing/src/py/tests/: conftest.py  test_index.py
shared/cost-tracker/: README.md
shared/latency-tracker/: README.md
shared/prompt-registry/: README.md
shared/test-fixtures/: README.md
shared/trace-logger/: README.md
shared/trace-logger/src/py/: __init__.py  pyproject.toml  types.py
shared/trace-logger/src/py/tests/: test_index.py
(+396 files in other folders)
