[project]
name = "trace-logger"
version = "0.1.0"
description = "Shared tracer for LLM pipelines — lightweight span context management and OTel-aligned attribute keys"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]
