[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cost-dashboard"
version = "1.0.0"
description = "Track, attribute, and aggregate LLM API spend"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true
