[project]
name = "token-budget-middleware"
version = "0.1.0"
description = "Token budget enforcement middleware for LLM providers"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Run with: python3 -m pytest --import-mode=importlib
# The --import-mode flag avoids 'py' directory name collision with pytest's py dependency
