[project]
name = "output-quality-monitoring"
version = "0.1.0"
description = "Async scoring pipeline for production LLM output quality monitoring"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
