[project]
name = "adversarial-inputs"
version = "0.1.0"
description = "Adversarial input testing harness for LLM systems"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["adversarial_inputs/tests"]
